--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=food-order-backendd.vercel.app
+VITE_BACKEND_URL2=http://localhost:5000
