--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=food-order-back-ad9curd7e-savyasachibhats-projects.vercel.app
+VITE_BACKEND_URL=https://food-order-back-ad9curd7e-savyasachibhats-projects.vercel.app
 VITE_BACKEND_URL2=http://localhost:5000
