--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL2=https://food-order-back-delta.vercel.app
-VITE_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=https://food-order-back-delta.vercel.app
+VITE_BACKEND_URL2=http://localhost:5000
